--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -13,5 +13,11 @@
     >
       <h2 class="w-full text-2xl text-center font-nasa">Time Converter</h2>
     </div>
+    <div
+      class="p-3 border rounded-full hover:cursor-pointer hover:bg-menu-250 bg-menu-300 border-menu-400"
+      routerLink="pokemon-search"
+    >
+      <h2 class="w-full text-2xl text-center font-nasa">Pokemon Search</h2>
+    </div>
   </div>
 </div>
