--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -50,6 +50,22 @@
       <h2 class="pb-2 text-2xl font-bold">News and Updates</h2>
       <ul class="space-y-3">
         <li>
+          <h2 class="text-xl font-semibold">August 29th, 2024</h2>
+          <h3 class="pl-4">
+            <div>
+              The
+              <a
+                href="https://pokemondraftzone.com/tools/pokemon-search"
+                class="font-semibold text-blue-500"
+                >Pokemon Search tool</a
+              >
+              has been added in the planner and as its own seperate tool. This
+              is the perfect tool for when you are searching for that special
+              pokemon that fits all your needs!
+            </div>
+          </h3>
+        </li>
+        <li>
           <h2 class="text-xl font-semibold">August 15th, 2024</h2>
           <h3 class="pl-4">
             <div>
