basic recommended working

--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -273,6 +273,7 @@
               class="h-full max-w-full"
               *ngIf="tabSelected == 1 && typechart"
               [typechart]="typechart"
+              [recommended]="recommended"
             ></typechart>
             <moves
               class="overflow-y-auto w-full"
