--- a/src/app/planner/typechart/typechart.component.html
+++ b/src/app/planner/typechart/typechart.component.html
@@ -1,173 +1,191 @@
 <div class="flex-wrap flex">
-  <div
-    class="flex flex-col max-h-full h-fit border-4 max-w-full border-menu-400 bg-menu-100"
-  >
-    <div class="overflow-x-auto">
-      <table class="table-fixed">
-        <thead>
-          <tr>
-            <th class="w-12 border-r-4 border-r-menu-400"></th>
-            <th class="flex space-x-0.5 bg-menu-300 border-b-2 border-menu-400">
-              <div
-                class="w-10 flex space-x-1 items-center justify-center"
-                *ngFor="let type of types"
+  <div class="p-1">
+    <div
+      class="flex flex-col max-h-full h-fit border-4 max-w-full border-menu-400 bg-menu-100"
+    >
+      <div class="overflow-x-auto">
+        <table class="table-fixed">
+          <thead>
+            <tr>
+              <th class="w-12 border-r-4 border-r-menu-400"></th>
+              <th
+                class="flex space-x-0.5 bg-menu-300 border-b-2 border-menu-400"
               >
-                <img
-                  class=""
-                  src="../../../assets/icons/types/{{ type }}.png"
-                  onerror="this.src='../../../assets/icons/types/Unknown.png'"
-                  alt="{{ type }}"
-                />
-              </div>
-            </th>
-          </tr>
-        </thead>
+                <div
+                  class="w-10 flex space-x-1 items-center justify-center"
+                  *ngFor="let type of types"
+                >
+                  <img
+                    class=""
+                    src="../../../assets/icons/types/{{ type }}.png"
+                    onerror="this.src='../../../assets/icons/types/Unknown.png'"
+                    alt="{{ type }}"
+                  />
+                </div>
+              </th>
+            </tr>
+          </thead>
 
-        <tbody>
-          <tr *ngFor="let pokemon of typechart.team">
-            <th
-              class="w-12 border-r-4 cursor-pointer border-r-menu-400 hover:bg-menu-100"
-              (click)="toggleVisible(pokemon)"
-            >
-              <sprite
-                [pokemon]="pokemon"
-                [class.opacity-60]="pokemon.disabled"
-              ></sprite>
-            </th>
-            <td class="flex h-12 space-x-0.5">
-              <div
-                *ngFor="let type of types"
-                class="w-10 h-full border flex items-center justify-center"
-                [ngClass]="typeColor(pokemon.weak[type], pokemon.disabled!)"
+          <tbody>
+            <tr *ngFor="let pokemon of typechart.team">
+              <th
+                class="w-12 border-r-4 cursor-pointer border-r-menu-400 hover:bg-menu-100"
+                (click)="toggleVisible(pokemon)"
               >
-                <span> {{ pokemon.weak[type] }}</span>
-              </div>
-            </td>
-          </tr>
-        </tbody>
+                <sprite
+                  [pokemon]="pokemon"
+                  [class.opacity-60]="pokemon.disabled"
+                ></sprite>
+              </th>
+              <td class="flex h-12 space-x-0.5">
+                <div
+                  *ngFor="let type of types"
+                  class="w-10 h-full border flex items-center justify-center"
+                  [ngClass]="typeColor(pokemon.weak[type], pokemon.disabled!)"
+                >
+                  <span> {{ pokemon.weak[type] }}</span>
+                </div>
+              </td>
+            </tr>
+          </tbody>
 
-        <thead class="border-b-4 border-menu-400">
-          <tr>
-            <th class="w-12 border-r-4 border-r-menu-400"></th>
-            <th class="flex space-x-0.5 border-b-2 bg-menu-300 border-menu-400">
-              <div
-                class="w-10 flex items-center justify-center"
-                *ngFor="let type of types"
+          <thead class="border-b-4 border-menu-400">
+            <tr>
+              <th class="w-12 border-r-4 border-r-menu-400"></th>
+              <th
+                class="flex space-x-0.5 border-b-2 bg-menu-300 border-menu-400"
               >
-                <img
-                  class=""
-                  src="../../../assets/icons/types/{{ type }}.png"
-                  onerror="this.src='../../../assets/icons/types/Unknown.png'"
-                  alt="{{ type }}"
-                />
-              </div>
-            </th>
-          </tr>
-        </thead>
-        <tfoot class="bg-menu-300">
-          <tr>
-            <th
-              class="text-xs border border-r-2 bg-scale-negative-3 border-menu-400"
-            >
-              Weaks
-            </th>
-            <td class="flex space-x-0.5">
-              <div
-                *ngFor="let weakness of weaknesses"
-                class="text-center border h-full w-10"
-                [ngClass]="weakColor(weakness)"
+                <div
+                  class="w-10 flex items-center justify-center"
+                  *ngFor="let type of types"
+                >
+                  <img
+                    class=""
+                    src="../../../assets/icons/types/{{ type }}.png"
+                    onerror="this.src='../../../assets/icons/types/Unknown.png'"
+                    alt="{{ type }}"
+                  />
+                </div>
+              </th>
+            </tr>
+          </thead>
+          <tfoot class="bg-menu-300">
+            <tr>
+              <th
+                class="text-xs border border-r-2 bg-scale-negative-3 border-menu-400"
               >
-                {{ weakness | number : "1.0-0" }}
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <th
-              class="text-xs border border-r-2 bg-scale-positive-3 border-menu-400"
-            >
-              Resists
-            </th>
-            <td class="flex space-x-0.5">
-              <div
-                *ngFor="let resistance of resistances"
-                class="text-center border h-full w-10"
-                [ngClass]="resistColor(resistance)"
+                Weaks
+              </th>
+              <td class="flex space-x-0.5">
+                <div
+                  *ngFor="let weakness of weaknesses"
+                  class="text-center border h-full w-10"
+                  [ngClass]="weakColor(weakness)"
+                >
+                  {{ weakness | number : "1.0-0" }}
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <th
+                class="text-xs border border-r-2 bg-scale-positive-3 border-menu-400"
               >
-                {{ resistance | number : "1.0-0" }}
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <th
-              class="text-xs bg-gradient-to-r from-scale-negative-3 from-50% to-scale-positive-3 to-50% border border-menu-400 border-r-2"
-            >
-              Diff
-            </th>
-            <td class="flex space-x-0.5">
-              <div
-                *ngFor="let diff of difference"
-                class="text-center border h-full w-10"
-                [ngClass]="diffColor(diff)"
+                Resists
+              </th>
+              <td class="flex space-x-0.5">
+                <div
+                  *ngFor="let resistance of resistances"
+                  class="text-center border h-full w-10"
+                  [ngClass]="resistColor(resistance)"
+                >
+                  {{ resistance | number : "1.0-0" }}
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <th
+                class="text-xs bg-gradient-to-r from-scale-negative-3 from-50% to-scale-positive-3 to-50% border border-menu-400 border-r-2"
               >
-                {{ diff | number : "1.0-0" }}
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <th
-              class="text-xs border border-r-2 bg-gradient-to-r from-scale-negative-3 via-menu-200 to-scale-positive-3 border-menu-400"
-            >
-              Log
-            </th>
-            <td class="flex space-x-0.5">
-              <div
-                *ngFor="let diff of differential"
-                class="text-center border w-10"
-                [ngClass]="diffColor(diff)"
+                Diff
+              </th>
+              <td class="flex space-x-0.5">
+                <div
+                  *ngFor="let diff of difference"
+                  class="text-center border h-full w-10"
+                  [ngClass]="diffColor(diff)"
+                >
+                  {{ diff | number : "1.0-0" }}
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <th
+                class="text-xs border border-r-2 bg-gradient-to-r from-scale-negative-3 via-menu-200 to-scale-positive-3 border-menu-400"
               >
-                {{ diff | number : "1.0-0" }}
-              </div>
-            </td>
-          </tr>
-        </tfoot>
-      </table>
+                Log
+              </th>
+              <td class="flex space-x-0.5">
+                <div
+                  *ngFor="let diff of differential"
+                  class="text-center border w-10"
+                  [ngClass]="diffColor(diff)"
+                >
+                  {{ diff | number : "1.0-0" }}
+                </div>
+              </td>
+            </tr>
+          </tfoot>
+        </table>
+      </div>
     </div>
   </div>
-  <div class="flex flex-col items-center">
-    <h3 class="font-semibold text-lg">Recommended</h3>
-    <div class="flex space-x-4 max-h-96 overflow-y-auto">
-      <table>
-        <tr>
-          <th></th>
-          <th>Pokemon</th>
-        </tr>
-        <tr *ngFor="let pokemon of recommended.pokemon; let i = index">
-          <td>{{ i + 1 }}</td>
-          <td class="w-10 text-center text-sm">
-            <sprite [pokemon]="pokemon"></sprite>
-            {{ pokemon.name }}
-          </td>
-        </tr>
-      </table>
-      <table>
-        <tr>
-          <th></th>
-          <th>Types</th>
-        </tr>
-        <tr *ngFor="let tier of recommended.types; let i = index">
-          <td>{{ i + 1 }}</td>
-          <td>
-            <div *ngFor="let type of tier">
-              <img
-                class=""
-                src="../../../assets/icons/types/{{ type }}.png"
-                onerror="this.src='../../../assets/icons/types/Unknown.png'"
-                alt="{{ type }}"
-              />
-            </div>
-          </td>
-        </tr>
-      </table>
+  <div class="p-1">
+    <div
+      class="flex flex-col items-center border-4 border-menu-400 bg-menu-100"
+    >
+      <h3
+        class="font-semibold text-lg border-b-2 border-menu-400 bg-menu-200 w-full text-center"
+      >
+        Recommended
+      </h3>
+      <div class="flex space-x-4 max-h-96 overflow-y-auto">
+        <div class="p-2">
+          <table>
+            <tr>
+              <td></td>
+              <td>Pokemon</td>
+            </tr>
+            <tr *ngFor="let pokemon of recommended.pokemon; let i = index">
+              <td>{{ i + 1 }}</td>
+              <td class="w-8 text-center text-xs py-2">
+                <sprite [pokemon]="pokemon"></sprite>
+                {{ pokemon.name }}
+              </td>
+            </tr>
+          </table>
+        </div>
+        <div class="p-2">
+          <table>
+            <tr>
+              <td></td>
+              <td>Types</td>
+            </tr>
+            <tr *ngFor="let tier of recommended.types; let i = index">
+              <td>{{ i + 1 }}</td>
+              <td class="flex flex-col items-center py-2">
+                <div *ngFor="let type of tier">
+                  <img
+                    class=""
+                    src="../../../assets/icons/types/{{ type }}.png"
+                    onerror="this.src='../../../assets/icons/types/Unknown.png'"
+                    alt="{{ type }}"
+                  />
+                </div>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
     </div>
   </div>
 </div>
