--- a/src/app/tools/time_converter/time_converter.component.html
+++ b/src/app/tools/time_converter/time_converter.component.html
@@ -55,7 +55,7 @@
       </div>
       <br />
       <label class="text-smfont-medium text-symbolColor-main">
-        >Discord Timestamp</label
+        Discord Timestamp</label
       >
       <div
         class="w-full h-8 flex items-center p-1 mt-1 border rounded-md shadow-sm bg-menu-100 border-menu-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
