--- a/src/app/league-list/league-ad/league-ad.component.html
+++ b/src/app/league-list/league-ad/league-ad.component.html
@@ -1,71 +1,144 @@
-<h2 class="text-xl font-semibold text-gray-800 mb-2">
-  {{ league.leagueName }}
-</h2>
+<div (click)="toggleCollapsed()">
+  <div *ngIf="!collapsed">
+    <h2 class="text-xl font-semibold text-gray-800 mb-2">
+      {{ league.leagueName }}
+    </h2>
 
-<div class="flex items-center space-x-2 mb-2">
-  <div class="h-6 w-6">
-    <ball-svg [style]="SKILLBALLS[getMinSkill(league)]"></ball-svg>
-  </div>
-  <span class="text-sm text-gray-600">{{ league.description }}</span>
-</div>
+    <span class="text-sm text-gray-600">{{ league.description }}</span>
 
-<div class="mt-4">
-  <p><strong>Platform:</strong> {{ league.hostPlatform }}</p>
-
-  <p class="mt-2"><strong>Divisions:</strong></p>
-  <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
-    <div
-      *ngFor="let division of league.divisions"
-      class="bg-gray-100 p-3 rounded-md"
-    >
-      <div class="font-semibold">{{ division.divisionName }}</div>
-      <div>{{ division.format }}</div>
-      <div>{{ division.ruleset }}</div>
-      <div class="flex items-center space-x-2 mt-1">
-        <div class="h-6 w-6">
-          <ball-svg
-            [style]="SKILLBALLS[division.skillLevelRange.from]"
-          ></ball-svg>
+    <div class="mt-4">
+      <div class="space-x-1 flex">
+        <label for="hostlink" class="font-semibold">Host Link:</label>
+        <a
+          id="hostlink"
+          href="{{ league.hostLink }}"
+          class="text-blue-500 text-center underline block overflow-hidden whitespace-nowrap text-ellipsis sm:overflow-visible"
+          style="max-width: 250px"
+          >{{ league.hostLink }}</a
+        >
+      </div>
+      <p class="mt-2"><strong>Divisions:</strong></p>
+      <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
+        <div
+          *ngFor="let division of league.divisions"
+          class="bg-gray-100 p-3 rounded-md"
+        >
+          <div class="font-semibold">{{ division.divisionName }}</div>
+          <span *ngIf="division.description" class="text-sm text-gray-600">{{
+            division.description
+          }}</span>
+          <div class="text-sm px-2">
+            <div class="space-x-1">
+              <label for="format" class="font-semibold">Format:</label>
+              <span id="format">{{ division.format }}</span>
+            </div>
+            <div class="space-x-1">
+              <label for="ruleset" class="font-semibold">Ruleset:</label>
+              <span id="ruleset">{{ division.ruleset }}</span>
+            </div>
+            <div class="space-x-1">
+              <label for="platform" class="font-semibold">Platform:</label>
+              <span id="platform">{{ division.platform }}</span>
+            </div>
+            <div
+              class="space-x-1 flex items-center"
+              *ngIf="division.prizeValue && division.prizeValue > 0"
+            >
+              <label for="prize" class="font-semibold">Prize Value:</label>
+              <div id="prize" class="flex items-center">
+                <div
+                  *ngFor="let i of [].constructor(division.prizeValue)"
+                  class="h-4 w-4"
+                >
+                  <coin-svg></coin-svg>
+                </div>
+              </div>
+            </div>
+            <div class="space-x-1 flex items-center">
+              <label for="skillrange" class="font-semibold">Skill Range:</label>
+              <div id="skillrange" class="flex items-center space-x-0.5 mt-1">
+                <div class="h-6 w-6">
+                  <ball-svg
+                    [style]="SKILLBALLS[division.skillLevelRange.from]"
+                  ></ball-svg>
+                </div>
+                <ng-container
+                  *ngIf="
+                    division.skillLevelRange.from !==
+                    division.skillLevelRange.to
+                  "
+                >
+                  <div>&rarr;</div>
+                  <div class="h-6 w-6">
+                    <ball-svg
+                      [style]="SKILLBALLS[division.skillLevelRange.to]"
+                    ></ball-svg>
+                  </div>
+                </ng-container>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="h-6 w-6">
-          <ball-svg
-            [style]="SKILLBALLS[division.skillLevelRange.to]"
-          ></ball-svg>
+      </div>
+    </div>
+
+    <div
+      class="mt-4 flex flex-wrap justify-between items-center space-y-2 sm:space-y-0"
+    >
+      <div class="flex-1 justify-center flex flex-wrap space-x-2">
+        <strong>Signup Link:</strong>
+        <a
+          href="{{ league.signupLink }}"
+          class="text-blue-500 text-center underline block overflow-hidden whitespace-nowrap text-ellipsis sm:overflow-visible"
+          style="max-width: 250px"
+          >{{ league.signupLink }}</a
+        >
+      </div>
+      <div class="flex-1 justify-center flex flex-wrap space-x-2">
+        <strong>Closes At:</strong>
+        <div
+          class="text-center block overflow-hidden whitespace-nowrap text-ellipsis sm:overflow-visible"
+        >
+          {{ league.closesAt | date }}
+        </div>
+      </div>
+      <div class="flex-1 justify-center flex flex-wrap space-x-2">
+        <strong>Season:</strong>
+        <div
+          class="text-center block overflow-hidden whitespace-nowrap text-ellipsis sm:overflow-visible"
+        >
+          {{ league.seasonStart | date }}
+          <ng-container *ngIf="league.seasonEnd">
+            - {{ league.seasonEnd | date }} ({{ weeks }} weeks)
+          </ng-container>
         </div>
       </div>
     </div>
   </div>
-</div>
-
-<div
-  class="mt-4 flex flex-wrap justify-between items-center space-y-2 sm:space-y-0"
->
-  <div class="flex-1 justify-center flex flex-wrap space-x-2">
-    <strong>Signup Link:</strong>
-    <a
-      href="{{ league.signupLink }}"
-      class="text-blue-500 text-center underline block overflow-hidden whitespace-nowrap text-ellipsis sm:overflow-visible"
-      style="max-width: 250px"
-      >{{ league.signupLink }}</a
-    >
-  </div>
-  <div class="flex-1 justify-center flex flex-wrap space-x-2">
-    <strong>Closes At:</strong>
-    <div
-      class="text-center block overflow-hidden whitespace-nowrap text-ellipsis sm:overflow-visible"
-    >
-      {{ league.closesAt | date }}
+  <div *ngIf="collapsed">
+    <div class="flex justify-between items-center mb-2">
+      <div class="flex h-fit items-center space-x-2">
+        <h2 class="text-xl font-semibold text-gray-800">
+          {{ league.leagueName }}
+        </h2>
+        <div class="flex items-center space-x-1">
+          <div class="h-6 w-6">
+            <ball-svg [style]="SKILLBALLS[tags.skill]"></ball-svg>
+          </div>
+          <div *ngIf="tags.prize" class="h-6 w-6">
+            <coin-svg></coin-svg>
+          </div>
+          <div *ngIf="tags.singles" class="font-extrabold text-xl">1v1</div>
+          <div *ngIf="tags.doubles" class="font-extrabold text-xl">2v2</div>
+          <div *ngIf="tags.wifi" class="h-6 w-6">
+            <coin-svg></coin-svg>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="flex-1 justify-center flex flex-wrap space-x-2">
-    <strong>Season:</strong>
-    <div
-      class="text-center block overflow-hidden whitespace-nowrap text-ellipsis sm:overflow-visible"
-    >
-      {{ league.seasonStart | date }}
-      <ng-container *ngIf="league.seasonEnd">
-        - {{ league.seasonEnd | date }} ({{ getWeeks(league) }} weeks)
-      </ng-container>
+
+    <div class="flex items-center space-x-2 mb-2">
+      <span class="text-sm text-gray-600">{{ league.description }}</span>
     </div>
   </div>
 </div>
