--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -96,7 +96,7 @@
           >
           <a
             class="w-1/3 m-2 text-center shadow bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
-            [routerLink]="'edit'"
+            routerLink="edit"
             [queryParams]="{ draft: draft.leagueId | json }"
             >Edit Team
           </a>
@@ -130,7 +130,7 @@
   </div>
   <div class="flex p-3">
     <button
-      [routerLink]="'/draft/new'"
+      routerLink="/draft/new"
       class="flex items-center p-1 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
       title="Add League"
     >
@@ -138,7 +138,7 @@
     </button>
     <div class="flex-grow"></div>
     <button
-      [routerLink]="'/draft/archives'"
+      routerLink="/draft/archives"
       class="flex items-center p-1 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
       title="Archives"
     >
